--- a/public/chat.html
+++ b/public/chat.html
@@ -18,9 +18,9 @@
     </header>
     <main class="chat-main" style="background-color: #242e42;">
       <div class="chat-sidebar" style="background-color: #242e42;">
-        <h3><i class="fas fa-comments"></i> Room Name:</h3>
+        <h3>Room Name:</h3>
         <h2 id="room-name"></h2>
-        <h3><i class="fas fa-users"></i> Users</h3>
+        <h3>Users</h3>
         <ul id="users"></ul>
       </div>
       <div class="chat-messages"></div>
